fix audio on visible

--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ body {
 }
 
 .groom-bride .couple {
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 .groom-bride .couple h3 {
